# sqlmodel-dynamic

./: .gitignore  config.py  db.py  main.py  models.py  pyproject.toml  scrape.py  settings.py  vault.py
environment/: .env  dev.env  local.env  prod.env
